# -Multi-Agent-System-with-Ollama

./: .env.example  LICENSE  README.md  cleanup_for_telegram.sh  diagnose_system.sh  fix_logging.py  fix_python_version.sh  pyproject.toml  run.sh  run_swap_bot.sh  run_telegram.sh  success_banner.sh  test_import.py  test_system.py
scripts/: deploy_models.sh  init_ollama.py
src/agent_syatem/: __init__.py  config.py  main.py
src/agent_syatem/core/: orchestrator.py  router_agent.py
src/agent_syatem/telegram/: bot.py  keyboards.py
src/agent_syatem/utils/: helpers.py
src/agent_system/: __init__.py  main.py
src/agent_system/agents/: __init__.py  analysis_agent.py  code_specialist.py  email_agent.py  generic_agent.py  vision_agent.py
src/agent_system/agents/memory/: manager.py
src/agent_system/core/: orchestrator.py  router_agent.py  specialist_base.py  streaming_agent.py
src/agent_system/memory/: manager.py
src/agent_system/models/: schemas.py
src/agent_system/telegram/: bot.py  callbacks.py  handlers.py
src/agent_system/utils/: __init__.py  cache.py  logger.py  ollama_client.py
