[tool.poetry]
name = "multi-agent-system"
version = "1.0.0"
description = "Production Multi-Agent System"
authors = ["Your Name"]
packages = [{include = "agent_system", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
psutil = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = "agent_system.main:main"
